--- a/about.html
+++ b/about.html
@@ -25,14 +25,14 @@
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="indšx.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="team.html">Our Team</a></li>
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="about.html" title="Switch to French">
+                            <a href="about_french.html" title="Switch to French">
                                 <i class="fas fa-globe"></i> FR
                             </a>
                         </li>
