--- a/index.html
+++ b/index.html
@@ -108,21 +108,23 @@
         <!-- Gallery Section -->
         <section id="wokovuway-gallery">
             <div class="gallery-container">
-                <h2>Our Gallery</h2>
+                <h2>The Difference We Make</h2>
                 <p>Compassion in Action</p>
                 <button class="gallery-prev">❮</button>
                 <div class="gallery-slider">
                     <div class="gallery-slide" style="background-image: url('images/roof_edited.jpg');">
-                        <h3>Donate Today</h3>
+                        <a href="our_achievements.html" target="_blank">
+                            <h3>Shielding Communities</h3>
+                        </a>
                     </div>
-                    <div class="gallery-slide" style="background-image: url('images/food_shar.jpg');">
-                        <h3>Show You Care</h3>
+                    <div class="gallery-slide" style="background-image: url('images/PXL_camp.jpg');">
+                        <h3>Safe Spaces & Security</h3>
                     </div>
                     <div class="gallery-slide" style="background-image: url('images/women_emp.jpg');">
-                        <h3>Donation is Caring</h3>
+                        <h3> Women empowerment </h3>
                     </div>
                     <div class="gallery-slide" style="background-image: url('images/health.jpg');">
-                        <h3>Donation Saves Lives</h3>
+                        <h3>Health Care </h3>
                     </div>
                 </div>
                 <button class="gallery-next">❯</button>
@@ -132,7 +134,7 @@
         <!-- Support Section -->
         <section id="wokovuway-support" class="section-gray">
             <div class="support-container">
-                <h2>Support Us</h2>
+                <h2>Support our cause</h2>
                 <p>Your kindness fosters growth and opportunity.</p>
                 <video src="images/wokovideo.mp4" autoplay loop muted playsinline controls></video>
             </div>
