--- a/success.html
+++ b/success.html
@@ -61,26 +61,30 @@
             </div>
             <div class="row catalog-items">
                 <div class="catalog-item">
-                    <a href="update_1.html">
+                    <a href="our_achievements_fr.html">
                         <div class="thumbnail">
                             <img src="images/p.shielding.jpg" alt="Shielding Communities">
                             <i class="fas fa-play overlay-icon"></i>
                         </div>
                     </a>
                     
-                    <div class="description">
-                        <h3>Shielding Communities</h3>
-                        <p>Over 3,000 lives impacted: Delivering tarpaulins to vulnerable communities, providing
-                            shelter, protection, and security in times of crisis.</p>
+                    <div class="description"> 
+                        <a href="our_achievements.html" target="_blank">
+                            <h3> Shielding Communities</h3>
+                            <p>Over 3,000 lives impacted: Providing tarps to vulnerable communities, offering shelter, protection, and security during times of crisis.</p>
+                        </a>
                     </div>
+                    
                 </div>
                 <div class="catalog-item">
                     <div class="thumbnail">
-                        <img src="images/health1.png" alt="Health Care">
-                        <i class="fas fa-play overlay-icon"></i>
+                        <a href="our_achievements_section_2.html">
+                            <img src="images/health1.png" alt="Health Care">
+                            <i class="fas fa-play overlay-icon"></i>
+                        </a>
                     </div>
                     <div class="description">
-                        <h3>Health Care</h3>
+                        <h3><a href="our_achievements_section_2.html">Health Care</a></h3>
                         <p>Improving well-being through essential medication, sanitation education, and healthcare
                             initiatives for women and children.</p>
                     </div>
