--- a/success_french.html
+++ b/success_french.html
@@ -62,16 +62,20 @@
             </div>
             <div class="row catalog-items">
                 <div class="catalog-item">
-                    <a href="update_1_french.html">
+                    <a href="our_achievements_fr.html">
                         <div class="thumbnail">
                             <img src="images/p.shielding.jpg" alt="Shielding Communities">
                             <i class="fas fa-play overlay-icon"></i>
                         </div>
                     </a>
                     <div class="description">
-                        <h3>protéger les communautés </h3>
-                        <p>Plus de 3 000 vies impactées : Fourniture de bâches aux communautés vulnérables, offrant abri, protection et sécurité en temps de crise.</p>
+                        <a href="our_achievements_fr.html" target="_blank">
+                            <h3>protéger les communautés</h3>
+                            <p>Plus de 3 000 vies impactées : Fourniture de bâches aux communautés vulnérables, offrant
+                                abri, protection et sécurité en temps de crise.</p>
+                        </a>
                     </div>
+
                 </div>
                 <div class="catalog-item">
                     <div class="thumbnail">
@@ -80,7 +84,8 @@
                     </div>
                     <div class="description">
                         <h3>Soins de Santé</h3>
-                        <p>Amélioration du bien-être grâce à des médicaments essentiels, à l’éducation à l’assainissement et à des initiatives de santé pour les femmes et les enfants.</p>
+                        <p>Amélioration du bien-être grâce à des médicaments essentiels, à l’éducation à
+                            l’assainissement et à des initiatives de santé pour les femmes et les enfants.</p>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -90,7 +95,8 @@
                     </div>
                     <div class="description">
                         <h3>Gestion de l'Hygiène Menstruelle</h3>
-                        <p>Fourniture de produits sanitaires, d’éducation et d’installations d’assainissement pour garantir l’hygiène et la santé reproductive des filles et des femmes.</p>
+                        <p>Fourniture de produits sanitaires, d’éducation et d’installations d’assainissement pour
+                            garantir l’hygiène et la santé reproductive des filles et des femmes.</p>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -100,17 +106,19 @@
                     </div>
                     <div class="description">
                         <h3>Autonomisation des Femmes</h3>
-                        <p>Promotion de traits de masculinité positive comme la confiance et le leadership pour briser les stéréotypes de genre et favoriser l’égalité.</p>
+                        <p>Promotion de traits de masculinité positive comme la confiance et le leadership pour briser
+                            les stéréotypes de genre et favoriser l’égalité.</p>
                     </div>
                 </div>
                 <div class="catalog-item">
                     <div class="thumbnail">
-                        <img src="images/PXL_20240628_104704933 (1).jpg" alt="Espaces Sûrs">
+                        <img src="images/PXL_camp.jpg" alt="Espaces Sûrs">
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
                         <h3>Espaces Sûrs & Sécurité</h3>
-                        <p>Création d’environnements sécurisés avec accès à des commodités essentielles, favorisant la confiance, la dignité et les opportunités.</p>
+                        <p>Création d’environnements sécurisés avec accès à des commodités essentielles, favorisant la
+                            confiance, la dignité et les opportunités.</p>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -120,7 +128,8 @@
                     </div>
                     <div class="description">
                         <h3>Sensibilisation Impactante</h3>
-                        <p>Faire une différence grâce au soutien éducatif et à l’assistance caritative dans les communautés.</p>
+                        <p>Faire une différence grâce au soutien éducatif et à l’assistance caritative dans les
+                            communautés.</p>
                     </div>
                 </div>
             </div>
@@ -139,7 +148,8 @@
                         <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
                         <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
-                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
+                        <a
+                            href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
@@ -161,7 +171,7 @@
                             <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
@@ -170,16 +180,22 @@
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
-                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                                alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                                alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                                alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
