--- a/about_french.html
+++ b/about_french.html
@@ -120,7 +120,7 @@
                             <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
