--- a/donate_french.html
+++ b/donate_french.html
@@ -165,7 +165,7 @@
                             <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
@@ -178,7 +178,7 @@
                             <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
