--- a/index_french.html
+++ b/index_french.html
@@ -100,22 +100,31 @@
             </div>
         </section>
 
-        <!-- Section Galerie -->
-        <section id="wokovuway-gallery">
-            <div class="gallery-container">
-                <h2>Notre galerie</h2>
-                <p>La compassion en action.</p>
-                <button class="gallery-prev">❮</button>
-                <div class="gallery-slider">
-                    <div class="gallery-slide" style="background-image: url('images/roof_edited.jpg');"><h3>Faites un don aujourd'hui</h3></div>
-                    <div class="gallery-slide" style="background-image: url('images/food_shar.jpg');"><h3>Montrer que vous vous souciez</h3></div>
-                    <div class="gallery-slide" style="background-image: url('images/women_emp.jpg');"><h3>Le don, c'est se soucier</h3></div>
-                    <div class="gallery-slide" style="background-image: url('images/health.jpg');"><h3>Le don sauve des vies</h3></div>
-                </div>
-                <button class="gallery-next">❯</button>
+        <!-- Gallery Section -->
+<section id="wokovuway-gallery">
+    <div class="gallery-container">
+        <h2>La différence que nous faisons</h2>
+        <p>Compassion en action</p>
+        <button class="gallery-prev">❮</button>
+        <div class="gallery-slider">
+            <div class="gallery-slide" style="background-image: url('images/roof_edited.jpg');">
+                <a href="our_achievements.html" target="_blank">
+                    <h3>Protéger les communautés</h3>
+                </a>
             </div>
-        </section>
-
+            <div class="gallery-slide" style="background-image: url('images/PXL_camp.jpg');">
+                <h3>Espaces sécurisés et sécurité</h3>
+            </div>
+            <div class="gallery-slide" style="background-image: url('images/women_emp.jpg');">
+                <h3>Autonomisation des femmes</h3>
+            </div>
+            <div class="gallery-slide" style="background-image: url('images/health.jpg');">
+                <h3>Soins de santé</h3>
+            </div>
+        </div>
+        <button class="gallery-next">❯</button>
+    </div>
+</section>
         <!-- Section Soutien -->
         <section id="wokovuway-support" class="section-gray">
             <div class="support-container">
@@ -175,7 +184,7 @@
                             <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
