--- a/terms.html
+++ b/terms.html
@@ -32,7 +32,7 @@
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="terms_french.html" title="Switch to French">
+                            <a href="terms_french.html" title="Switch to French" id="translate-link">
                                 <i class="fas fa-globe"></i> FR
                             </a>
                         </li>
