--- a/terms_french.html
+++ b/terms_french.html
@@ -32,7 +32,7 @@
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="team.html" title="Passer à l'anglais">
+                            <a href="terms.html" title="Passer à l'anglais">
                                 <i class="fas fa-globe"></i> EN
                             </a>
                         </li>
@@ -160,7 +160,7 @@
                             <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
