--- a/volunteer_fr.html
+++ b/volunteer_fr.html
@@ -166,7 +166,7 @@
                             <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
                             <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
