--- a/our_achievements_fr.html
+++ b/our_achievements_fr.html
@@ -24,12 +24,12 @@
             <div class="hamburger"><i class="fas fa-bars"></i></div>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="about.html">À Propos</a></li>
-                    <li><a href="team.html">Notre Équipe</a></li>
-                    <li><a href="success.html">Histoires de Réussite</a></li>
-                    <li><a href="donate.html">Faire un Don</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index_french.html">Accueil</a></li>
+                    <li><a href="about_french.html">À Propos</a></li>
+                    <li><a href="team_french.html">Notre Équipe</a></li>
+                    <li><a href="success_french.html">Histoires de Réussite</a></li>
+                    <li><a href="donate_french.html">Faire un Don</a></li>
+                    <li><a href="contact_french.html">Contact</a></li>
                     <li class="lang-toggle">
                         <a href="our_achievements.html" title="Passer à l'anglais" id="translate-link">
                             <i class="fas fa-globe"></i> EN
