--- a/success.html
+++ b/success.html
@@ -95,7 +95,7 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Menstrual Hygiene Management</h3>
+                        <h3><a href="our_achievement_section_3.html">Menstrual Hygiene Management</a></h3>
                         <p>Providing sanitary products, education, and sanitation facilities to ensure hygiene and
                             reproductive health for girls and women.</p>
                     </div>
@@ -106,7 +106,7 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Empowering Women</h3>
+                        <h3><a href="our_achievement_section_4.html">Empowering Women </a></h3>
                         <p>Promoting positive masculinity traits like confidence and leadership to break gender
                             stereotypes and foster equality.</p>
                     </div>
@@ -117,7 +117,7 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Safe Spaces & Security</h3>
+                        <h3><a href="our_achievement_section_5.html">Safe Space & Security </a></h3>
                         <p>Creating secure environments with access to essential commodities, fostering trust, dignity,
                             and opportunity.</p>
                     </div>
@@ -128,7 +128,8 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Impactful Outreach</h3>
+              
+                        <h3><a href="our_achievement_section_6.html">Impactful Outreach </a></h3>
                         <p>Making a difference through educational support and charity assistance across communities.
                         </p>
                     </div>
