--- a/success_french.html
+++ b/success_french.html
@@ -83,7 +83,7 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Soins de Santé</h3>
+                        <h3><a href="our_achievement_section_2_fr.html">Soins de Santé</a></h3>
                         <p>Amélioration du bien-être grâce à des médicaments essentiels, à l’éducation à
                             l’assainissement et à des initiatives de santé pour les femmes et les enfants.</p>
                     </div>
@@ -94,9 +94,9 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Gestion de l'Hygiène Menstruelle</h3>
-                        <p>Fourniture de produits sanitaires, d’éducation et d’installations d’assainissement pour
-                            garantir l’hygiène et la santé reproductive des filles et des femmes.</p>
+                        <h3><a href="our_achievement_section_3_fr.html">Gestion de l'hygiène menstruelle</a></h3>
+                        <p>Fournir des produits sanitaires, de l'éducation et des installations d'assainissement pour
+                            garantir l'hygiène et la santé reproductive des filles et des femmes.</p>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -105,7 +105,7 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Autonomisation des Femmes</h3>
+                        <h3><a href="our_achievement_section_4_fr.html">Autonomisation des Femmes</a></h3>
                         <p>Promotion de traits de masculinité positive comme la confiance et le leadership pour briser
                             les stéréotypes de genre et favoriser l’égalité.</p>
                     </div>
@@ -116,7 +116,10 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Espaces Sûrs & Sécurité</h3>
+                        <div class="description">
+                            <h3><a href="our_achievement_section_5_fr.html">Espace sécurisé et sécurité</a></h3>
+<p>Créer des environnements sécurisés avec un accès aux produits de première nécessité, favorisant la confiance, la dignité et les opportunités.</p>
+                        </div>
                         <p>Création d’environnements sécurisés avec accès à des commodités essentielles, favorisant la
                             confiance, la dignité et les opportunités.</p>
                     </div>
@@ -127,7 +130,9 @@
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
-                        <h3>Sensibilisation Impactante</h3>
+                        <h3></h3>
+                        <h3><a href="our_achievement_section_6_fr.html">Sensibilisation Impactante </a></h3>
+                        
                         <p>Faire une différence grâce au soutien éducatif et à l’assistance caritative dans les
                             communautés.</p>
                     </div>
