--- a/team_french.html
+++ b/team_french.html
@@ -57,7 +57,8 @@
                             </a>
                         </h3>
                         <p class="role">Fondateur et Directeur</p>
-                        <p>Bagula apporte plus de 15 ans d'expérience humanitaire, menant des efforts de secours impactants pour les communautés déplacées au Congo.</p>
+                        <p>Bagula apporte plus de 15 ans d'expérience humanitaire, menant des efforts de secours
+                            impactants pour les communautés déplacées au Congo.</p>
                     </div>
                 </div>
                 <div class="team-item">
@@ -70,7 +71,8 @@
                             </a>
                         </h3>
                         <p class="role">Gestionnaire de programme</p>
-                        <p>Dr Nathan dirige nos initiatives en éducation et santé, pilotant des projets impactants pour les communautés vulnérables.</p>
+                        <p>Dr Nathan dirige nos initiatives en éducation et santé, pilotant des projets impactants pour
+                            les communautés vulnérables.</p>
                     </div>
                 </div>
                 <div class="team-item">
@@ -83,7 +85,9 @@
                             </a>
                         </h3>
                         <p class="role">Coordinateur de sensibilisation</p>
-                        <p>Vedaste, notre gestionnaire financier, nous connecte avec des partenaires locaux et des communautés, établissant la confiance et assurant que chaque don est utilisé efficacement, maintenant transparence et responsabilité dans toutes nos opérations.</p>
+                        <p>Vedaste, notre gestionnaire financier, nous connecte avec des partenaires locaux et des
+                            communautés, établissant la confiance et assurant que chaque don est utilisé efficacement,
+                            maintenant transparence et responsabilité dans toutes nos opérations.</p>
                     </div>
                 </div>
                 <div class="team-item">
@@ -96,7 +100,8 @@
                             </a>
                         </h3>
                         <p class="role">Spécialiste IT</p>
-                        <p>Moise garantit la sécurité des systèmes, améliore le développement de la plateforme et optimise la présence en ligne avec des solutions web adaptées.</p>
+                        <p>Moise garantit la sécurité des systèmes, améliore le développement de la plateforme et
+                            optimise la présence en ligne avec des solutions web adaptées.</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +121,8 @@
                         <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
                         <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
-                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
+                        <a
+                            href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
@@ -147,16 +153,22 @@
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
-                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                                alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                                alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                                alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
