--- a/our_achievement_section_2_fr.html
+++ b/our_achievement_section_2_fr.html
@@ -34,7 +34,7 @@
                         <li><a href="donate.html">Faire un don</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="our_achievements_section_2.html" title="Passer au français" id="translate-link">
+                            <a href="our_achievement_section_2.html" title="Passer au français" id="translate-link">
                                 <i class="fas fa-globe"></i> EN
                             </a>
                         </li>
@@ -192,68 +192,62 @@
                 <div class="footer-row">
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
-                        <p>Wokovu Way autonomise les communautés par l'innovation et le soutien.</p>
-                        <a href="about.html" class="read-more">En savoir plus</a>
+                        <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
-                        <a href="mailto:info@wokovuway.org?subject=Requête&body=Bonjour, j'ai une question à propos...">
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <li><a href="index.html">Accueil</a></li>
-                            <li><a href="about.html">À propos de nous</a></li>
-                            <li><a href="service.html">Services</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="privacy.html">Politique de confidentialité</a></li>
+                            <li><a href="index_french.html">Accueil</a></li>
+                            <li><a href="about_french.html">À propos de nous</a></li>
+                            <li><a href="service_fr.html">Services</a></li>
+                            <li><a href="contact_french.html">Contact</a></li>
+                            <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Conditions d'utilisation</a></li>
-                            <li><a href="accessibility.html">Déclaration d'accessibilité</a></li>
-                            <a href="faq.html" target="_blank">FAQ</a>
+                            <li><a href="terms_french.html">Termes et conditions</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter.html" target="_blank">Bulletin</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank"> infolettre</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Bénévolat</a></li>
+                            <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
-                        <h4>Nos Partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                                alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partenaire 3"></a>
-                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partenaire 4"></a>
+                        <h4>Nos partenaires</h4>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
-                <div class="footer-bottom">
-                    <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                    <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
-                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2025 Wokovu Way. Tous droits réservés.</p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
+            </div>
         </footer>
     </div>
 
