--- a/our_achievement_section_2.html
+++ b/our_achievement_section_2.html
@@ -171,6 +171,6 @@
         </footer>
     </div>
 
-    <script src="js/health_care.js"></script>
+    <script src="js/our_acheivment.js"></script>
 </body>
 </html>
