--- a/our_achievement_section_3_fr.html
+++ b/our_achievement_section_3_fr.html
@@ -248,7 +248,7 @@
         </footer>
     </div>
 
-    <script src="js/our_achievement_3.js"></script>
+    <script src="js/our_achievment_3.js"></script>
 </body>
 
 </html>
