--- a/our_achievement_section_4_fr.html
+++ b/our_achievement_section_4_fr.html
@@ -20,7 +20,7 @@
         <!-- Header & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="index_french.html" class="logo">
                     <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
@@ -28,14 +28,14 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index_french.html">Accueil</a></li>
-                        <li><a href="about_french.html">À Propos</a></li>
-                        <li><a href="team_french.html">Notre Équipe</a></li>
-                        <li><a href="success_french.html">Histoires de Réussite</a></li>
-                        <li><a href="donate_french.html">Faire un Don</a></li>
+                        <li><a href="about_french.html">À propos de nous</a></li>
+                        <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li>
+                        <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="our_achievement_section_4_fr.html" title="Passer au français" id="translate-link">
-                                <i class="fas fa-globe"></i> FR
+                            <a href="our_achievement_section_6.html" title="Passer à l'anglais">
+                                <i class="fas fa-globe"></i> EN
                             </a>
                         </li>
                     </ul>
