--- a/our_achievement_section_2_fr.html
+++ b/our_achievement_section_2_fr.html
@@ -251,7 +251,7 @@
         </footer>
     </div>
 
-    <script src="js/health_care.js"></script>
+    <script src="js/our_acheivment.js"></script>
 </body>
 
 </html>
