--- a/our_achievement_section_3.html
+++ b/our_achievement_section_3.html
@@ -17,21 +17,21 @@
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
                 <a href="index.html" class="logo">
-                    <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
+                    <img src="images/logos1.png" alt="Wokovuway Logo" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="about.html">À propos de nous</a></li>
-                        <li><a href="team.html">Notre équipe</a></li>
-                        <li><a href="success.html">Histoires de succès</a></li>
-                        <li><a href="donate.html">Faire un don</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="our_achievement_section_3_fr.html" title="Passer au français" id="translate-link">
-                                <i class="fas fa-globe"></i> EN
+                            <a href="our_achievement_section_3_fr.html" title="Switch to French" id="translate-link">
+                                <i class="fas fa-globe"></i> FR
                             </a>
                         </li>
                     </ul>
@@ -121,11 +121,11 @@
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <li><a href="index.html">Accueil</a></li>
-                            <li><a href="about.html">À propos de nous</a></li>
-                            <li><a href="service.html">Services</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="privacy.html">Politique de confidentialité</a></li>
+                            <li><a href="index_french.html">Accueil</a></li>
+                            <li><a href="about_french.html">À propos de nous</a></li>
+                            <li><a href="service_fr.html">Services</a></li>
+                            <li><a href="contact_french.html">Contact</a></li>
+                            <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
