--- a/our_achievement_section_4.html
+++ b/our_achievement_section_4.html
@@ -17,22 +17,21 @@
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
                 <a href="index.html" class="logo">
-                    <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
+                    <img src="../images/logos1.png" alt="Wokovuway Logo" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="about.html">À propos de nous</a></li>
-                        <li><a href="team.html">Notre équipe</a></li>
-                        <li><a href="success.html">Histoires de succès</a></li>
-                        <li><a href="donate.html">Faire un don</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="our_achievement_section_4_fr.html" title="Passer au français" id="translate-link">
-                                <i class="fas fa-globe"></i> FR
-                            </a>
+                            <a href="our_achievement_section_3_fr.html" title="Switch to French"><i
+                                    class="fas fa-globe"></i> FR </a>
                         </li>
                     </ul>
                 </nav>
