--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                 <div class="slide" style="background-image: url('images/water_is_life.jpg');">
                     <div class="slide-content">
                         <h1>Water is life, a necessity for all</h1>
-                        <p>Your support brings hope</p>
-                        <a href="" class="btn">See our programs </a>
+                        <p>Together, we can guarantee water access for all</p>
+                        <a href="Our programs" class="btn"></a>
+                        
                     </div>
                 </div>
             </div>
