--- a/team.html
+++ b/team.html
@@ -39,6 +39,19 @@
             </div>
         </header>
 
+        <!-- Team Intro Section -->
+        <section id="team-intro">
+            <div class="intro-container">
+                <div class="intro-content">
+                    <h2>Together We Thrive</h2>
+                    <p>At Wokovuway, our strength lies in unity. Our team works hand-in-hand to uplift communities and create lasting change.</p>
+                </div>
+                <div class="intro-image">
+                    <img src="images/together.jpg" alt="Hands Holding Each Other">
+                </div>
+            </div>
+        </section>
+
         <!-- Team Section -->
         <section id="our-team" class="container">
             <div class="row text-center">
@@ -56,8 +69,7 @@
                             </a>
                         </h3>
                         <p class="role">Founder & Director</p>
-                        <p>Bagula brings 15+ years of humanitarian experience, leading impactful relief efforts for
-                            displaced communities in Congo.</p>
+                        <p>Bagula brings 15+ years of humanitarian experience, leading impactful relief efforts for displaced communities in Congo.</p>
                     </div>
                 </div>
                 <div class="team-item">
@@ -70,8 +82,7 @@
                             </a>
                         </h3>
                         <p class="role">Program Manager</p>
-                        <p>Dr. Nathan leads our education and health initiatives, driving impactful projects for
-                            vulnerable communities.</p>
+                        <p>Dr. Nathan leads our education and health initiatives, driving impactful projects for vulnerable communities.</p>
                     </div>
                 </div>
                 <div class="team-item">
@@ -84,9 +95,7 @@
                             </a>
                         </h3>
                         <p class="role">Outreach Coordinator</p>
-                        <p>Vedaste, our financing manager, connects us with local partners and communities, building
-                            trust and ensuring every donation is used efficiently, maintaining transparency and
-                            accountability in all our operations.</p>
+                        <p>Vedaste, our financing manager, connects us with local partners and communities, building trust and ensuring every donation is used efficiently, maintaining transparency and accountability in all our operations.</p>
                     </div>
                 </div>
                 <div class="team-item">
@@ -143,7 +152,6 @@
                             <ul>
                                 <li><a href="newsletter.html" target="_blank">Newsletter</a></li>
                             </ul>
-
                             <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
@@ -151,31 +159,24 @@
                         <h4>Follow Us</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Our Partners</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partner 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partner 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partner 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partner 4"></a>
+                    </div>
                 </div>
-            </div>
-            <div class="footer-bottom">
-                <p>© 2025 Wokovu Way. All Rights Reserved.</p>
-                <p>Designed by <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
-            </div>
-        </footer>
-    </div>
-    <script src="js/team.js"></script>
-</body>
-
+                <div class="footer-bottom">
+                    <p>© 2025 Wokovu Way. All Rights Reserved.</p>
+                    <p>Designed by <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                </div>
+            </footer>
+        </div>
+        <script src="js/team.js"></script>
+    </body>
 </html>
